heavy refactor and rewrite
complete rewrite for html output
line by line reading instead of bulk
text output still uses old code, change when LDAP asks for it

--- a/AD_splitter/AD_Splitter.csproj
+++ b/AD_splitter/AD_Splitter.csproj
@@ -72,6 +72,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Code\LineProcessor.cs" />
     <Compile Include="frmDataSplitter.cs">
       <SubType>Form</SubType>
     </Compile>
